@@ -2,20 +2,21 @@ package test;
 
 import verifier.*;
 import verifier.check.LoopCheck;
+import verifier.check.ReachabilityCheck;
 import verifier.transformation.Transformation;
 import verifier.util.IPPrefix;
 import verifier.util.PacketSet;
+import verifier.util.Pair;
 import verifier.util.Utility;
 
-import java.util.HashMap;
-import java.util.List;
-import java.util.Map;
+import java.util.*;
 
 // Test Partial equivalence classes in Figure3
 public class Example2 {
     public static void main(String[] args) {
         Map<String, Integer> headerSettings = new HashMap<>();
-        headerSettings.put("dstip", 32); headerSettings.put("ttl", 8);
+        headerSettings.put("dstip", 32);
+//        headerSettings.put("ttl", 8);
 
         HeaderType headerType = new HeaderType(headerSettings);
         NetworkVerifier nv = new NetworkVerifier(headerType);
@@ -25,67 +26,68 @@ public class Example2 {
         Node v1 = nodes.get(0);
         Node v2 = nodes.get(1);
         Node v3 = nodes.get(2);
-        List<Edge> edges = nv.getOrAddBiEdge(v1, v2);
-        Edge e12 = edges.get(0);
-        Edge e21 = edges.get(1);
+        Pair<Edge, Edge> edges = nv.getOrAddBiEdge(v1, v2);
+        Edge e12 = edges.getFirst();
+        Edge e21 = edges.getSecond();
 
         edges = nv.getOrAddBiEdge(v2, v3);
-        Edge e23 = edges.get(0);
-        Edge e32 = edges.get(1);
+        Edge e23 = edges.getFirst();
+        Edge e32 = edges.getSecond();
 
         edges = nv.getOrAddBiEdge(v1, v1);
-        Edge e11 = edges.get(0);
+        Edge e11 = edges.getFirst();
 
         edges = nv.getOrAddBiEdge(v2, v2);
-        Edge e22 = edges.get(0);
+        Edge e22= edges.getFirst();
 
         edges = nv.getOrAddBiEdge(v3, v3);
-        Edge e33 = edges.get(0);
+        Edge e33 = edges.getFirst();
 
         nv.addCheck(new LoopCheck(nv.allHeaders()));
 
-        Map<String, IPPrefix> ipPrefixMap = new HashMap<>();
-        ipPrefixMap.put("dstip", new IPPrefix(0x0000000f, 30));
 
-        PacketSet dstM = nv.createPrefix(ipPrefixMap);
-
-        dstM.updateBoundingVolume();
-
-        PacketSet ttlM = nv.createSingle("ttl", 0);
-        ttlM.updateBoundingVolume();
-
-//        PacketSet t1 = nv.createSingle("ttl", 5);
-//        PacketSet t2 = nv.createSingle("ttl", 8);
-//        PacketSet t3 = nv.createSingle("ttl", 12);
-
-//        PacketSet tf = t1.or(t2).or(t3).and(dstM);
-//        tf.updateBoundingVolume();
+        PacketSet dstM = nv.createPrefix("dstip", 0x0000000fL, 30);
+        PacketSet tunnel = nv.createPrefix("dstip", 0x000000ffL, 32);
 
         PacketSet all = nv.allHeaders();
 
         Transformation drop = nv.getTDrop();
         Transformation _push = nv.getTPush();
-        Transformation ttl = nv.getTTtl();
-        Transformation _pop = nv.getTPop();
+        Transformation set = nv.getTSet(tunnel);
+        Transformation pop = nv.getTPop();
         Transformation delv = nv.getTDelv();
 
-        Transformation push = nv.getTSeq(_push, ttl);
-        Transformation pop = nv.getTSeq(_pop, ttl);
+        Transformation push = nv.getTSeq(_push, set);
 
-        Rule r0 = new Rule(100, e11, ttlM, drop);
-        Rule r1 = new Rule(200, e12, dstM, push);
-        Rule r2 = new Rule(300, e12, all, drop);
+        Rule r1 = new Rule(100, e12, dstM, push);
+        r1.setPrefixRule(0x0000000fL, 30);
+        Rule r2 = new Rule(300, e11, all, drop);
+        r2.setPrefixRule(0, 0);
 
-        Rule r3 = new Rule(100, e22, ttlM, drop);
-        Rule r4 = new Rule(200, e23, dstM, pop);
-        Rule r5 = new Rule(300, e22, all, drop);
+        Rule r3 = new Rule(100, e23, tunnel, nv.getTID());
+        r3.setPrefixRule(0x000000ffL, 32);
+        Rule r4 = new Rule(300, e22, all, drop);
+        r4.setPrefixRule(0, 0);
 
-        Rule r6 = new Rule(100, e33, ttlM, drop);
-        Rule r7 = new Rule(200, e33, all, delv);
 
-        nv.addRules(r0, r1, r2, r3, r4, r5, r6, r7);
+        Rule r5 = new Rule(100, e33, tunnel, pop);
+        r5.setPrefixRule(0x000000ffL, 32);
+        Rule r6 = new Rule(200, e33, dstM, delv);
+        r6.setPrefixRule(0x0000000fL, 30);
+        Rule r7 = new Rule(300, e33, all, drop);
+        r7.setPrefixRule(0, 0);
+
+        nv.addRules(r1, r2, r3, r4, r5, r6, r7);
 //
         nv.calInitPEC();
+
+        nv.addCheck(new ReachabilityCheck(all, v3, nv));
+
+        for(PacketSet p: nv.getPecs()) {
+            System.out.println("check pec:" +p);
+            Trace trace = nv.checkProperty(p, Collections.singletonList(v1));
+            if (trace != null) trace.print();
+        }
 
     }
 }
